--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 # NOTE: Remove all extra containers that you don't need.
 
-# webapp-template-admin:
-#   container_name: webapp-template-admin
+# server-template-admin:
+#   container_name: server-template-admin
 #   build: ./admin
 #   restart: always
 #   ports:
@@ -10,14 +10,14 @@
 #     - "./admin:/app"
 #     - "/app/node_modules"
 #   links:
-#     - webapp-template-server:webapp-template-server
+#     - server-template-server:server-template-server
 #   environment:
 #     COMMON_ENV: local
 #     API_ROOT: 'http://0.0.0.0:3331'
 #     API_URL: ''
 
-webapp-template-client:
-  container_name: webapp-template-client
+server-template-client:
+  container_name: server-template-client
   build: ./client
   restart: always
   ports:
@@ -26,14 +26,14 @@ webapp-template-client:
     - "./client:/app"
     - "/app/node_modules"
   links:
-    - webapp-template-server:webapp-template-server
+    - server-template-server:server-template-server
   environment:
     COMMON_ENV: local
     API_ROOT: 'http://0.0.0.0:3332'
     API_URL: ''
 
-webapp-template-server:
-  container_name: webapp-template-server
+server-template-server:
+  container_name: server-template-server
   build: ./server
   restart: always
   ports:
@@ -42,35 +42,35 @@ webapp-template-server:
     - "./server:/app"
     - "/app/node_modules"
   links:
-    - webapp-template-cache:webapp-template-cache
-    - webapp-template-database:webapp-template-database
-    - webapp-template-bucket:webapp-template-bucket
+    - server-template-cache:server-template-cache
+    - server-template-database:server-template-database
+    - server-template-bucket:server-template-bucket
   environment:
     COMMON_ENV: local
     COMMON_DEBUG: 'true'
-    COMMON_PROJECT: webapp-template
+    COMMON_PROJECT: server-template
     COMMON_CUSTOMER: customername
     APP_EXAMPLE: example
     ENV: dev
     DEBUG: 'true'
     API_BINDADDR: 0.0.0.0
     API_PORT: 3332
-    BUCKET_HOST: webapp-template-bucket
-    BUCKET_ID: webapp_template_local
+    BUCKET_HOST: server-template-bucket
+    BUCKET_ID: server_template_local
     BUCKET_REGION: europe-west1-c
     BUCKET_PROTOCOL: http
     BUCKET_ACCESS_KEY: 070UEOQR6LX4YPZLFU0V
     BUCKET_SECRET_KEY: CVQVa33NekSiOJGnevSY5ITr8Rql8lFkp22WhLQ+
-    DATABASE_HOST: webapp-template-database
-    DATABASE_ID: webapp_template_local
-    DATABASE_DB: webapp_template_local
-    DATABASE_USER: webapp_template_local_app
+    DATABASE_HOST: server-template-database
+    DATABASE_ID: server_template_local
+    DATABASE_DB: server_template_local
+    DATABASE_USER: server_template_local_app
     DATABASE_SECRET: secret
     DATABASE_POOL_MAX: '10'
     # TODO remove obsolete env variables
 
-webapp-template-cache:
-  container_name: webapp-template-cache
+server-template-cache:
+  container_name: server-template-cache
   image: redis
   restart: always
   ports:
@@ -78,22 +78,22 @@ webapp-template-cache:
 
 # "EXTERNAL RESOURCES"
 
-webapp-template-database:
-  container_name: webapp-template-database
+server-template-database:
+  container_name: server-template-database
   image: kiasaki/alpine-postgres:9.5
   restart: always
   ports:
     - "5432:5432"
   environment:
-    POSTGRES_DB: webapp_template_local
-    POSTGRES_USER: webapp_template_local_app
+    POSTGRES_DB: server_template_local
+    POSTGRES_USER: server_template_local_app
     POSTGRES_PASSWORD: secret
   volumes:
     # TODO init needs its own folder?
     - "./database:/docker-entrypoint-initdb.d"
 
-webapp-template-bucket:
-  container_name: webapp-template-bucket
+server-template-bucket:
+  container_name: server-template-bucket
   image: minio/minio
   restart: always
   command: server /export
