--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -45,14 +45,14 @@ steps:
 # ----------------------- Taito-cli ----------------------------------
 
 - id: install
-  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli:latest'
+  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli'
   args: ['install:$BRANCH_NAME']
   env:
     - taito_mode=ci
 
 - id: release-pre
   waitFor: ['install']
-  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli:latest'
+  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli'
   args: ['release-pre:$BRANCH_NAME']
   env:
     - taito_mode=ci
@@ -60,21 +60,21 @@ steps:
 
 - id: test-unit
   waitFor: ['install']
-  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli:latest'
+  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli'
   args: ['test-unit:$BRANCH_NAME']
   env:
     - taito_mode=ci
 
 - id: scan
   waitFor: ['install']
-  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli:latest'
+  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli'
   args: ['scan:$BRANCH_NAME']
   env:
     - taito_mode=ci
 
 - id: docs
   waitFor: ['install']
-  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli:latest'
+  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli'
   args: ['docs:$BRANCH_NAME']
   env:
     - taito_mode=ci
@@ -83,14 +83,14 @@ steps:
 
 - id: build-client
   waitFor: ['install']
-  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli:latest'
+  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli'
   args: ['build:$BRANCH_NAME', 'client', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
   env:
     - taito_mode=ci
 
 - id: build-server
   waitFor: ['install']
-  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli:latest'
+  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli'
   args: ['build:$BRANCH_NAME', 'server', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
   env:
     - taito_mode=ci
@@ -98,51 +98,51 @@ steps:
 # STACK END
 
 - id: db-deploy
-  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli:latest'
+  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli'
   args: ['db-deploy:$BRANCH_NAME']
   env:
     - taito_mode=ci
 
 - id: deploy
-  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli:latest'
+  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli'
   args: ['deploy:$BRANCH_NAME', '$COMMIT_SHA']
   env:
     - taito_mode=ci
 
 - id: deployment-wait
-  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli:latest'
+  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli'
   args: ['deployment-wait:$BRANCH_NAME']
   env:
     - taito_mode=ci
 
 - id: test-api
   waitFor: ['deployment-wait']
-  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli:latest'
+  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli'
   args: ['test-api:$BRANCH_NAME']
   env:
     - taito_mode=ci
 
 - id: test-e2e
   waitFor: ['deployment-wait']
-  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli:latest'
+  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli'
   args: ['test-e2e:$BRANCH_NAME']
   env:
     - taito_mode=ci
 
 # - id: deployment-verify
-#   name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli:latest'
+#   name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli'
 #   args: ['deployment-verify:$BRANCH_NAME']
 #   env:
 #     - taito_mode=ci
 
 - id: publish
-  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli:latest'
+  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli'
   args: ['publish:$BRANCH_NAME']
   env:
     - taito_mode=ci
 
 - id: release-post
-  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli:latest'
+  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli'
   args: ['release-post:$BRANCH_NAME']
   env:
     - taito_mode=ci
