--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -42,10 +42,8 @@ http {
         location /nginx_status {
             stub_status on;
             access_log off;
-
-            # TODO put back
-            # allow 127.0.0.1;
-            # deny all;
+            allow 127.0.0.1;
+            deny all;
         }
 
     }
