--- a/package.json
+++ b/package.json
@@ -74,5 +74,6 @@
     "pre-push": "^0.1.1",
     "semantic-release": "^6.3.6",
     "validate-commit-msg": "^2.14.0"
-  }
+  },
+  "version": "0.0.0"
 }
