--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,4 @@
-0.4.0steps:
+steps:
 
 # NOTE: This first ugly step is an optimization. We execute cancel with
 # the google provided kubectl container instead of taito-cli, because it
