--- a/package.json
+++ b/package.json
@@ -8,27 +8,29 @@
     }
   },
   "scripts": {
+    "lint": "echo TODO: lint code in package.json",
+    "commit": "git-cz",
+    "commitmsg": "validate-commit-msg",
     "users:local": "echo TODO: add local users to package.json",
     "users:dev": "echo Basic auth: #username/#password; echo TODO: add dev users to package.json",
     "users:test": "echo Basic auth: #username/#password; echo TODO: add test users to package.json",
-    "scan": "echo TODO: lint code in package.json",
-    "test-unit": "echo TODO: implement test:unit in package.json",
-    "test-api": "echo TODO: implement test:api in package.json. Env=${taito_env} url=${taito_app_url} user=${test_api_user} password=${test_api_password}",
-    "test-e2e": "echo TODO: implement test:e2e in package.json. Env=${taito_env} url=${taito_app_url} user=${test_e2e_user} password=${test_e2e_password}",
-    "verify": "npm-run-all --parallel scan test-unit",
-    "docs": "echo TODO: generate docs in package.json",
     "contacts-development": "cat PROJECT.md | sed -n -e '/^## Development.*$/,/^#.*$/{ /^## Development.*$/d; /^#.*$/d; p; }'",
     "contacts-maintenance": "cat PROJECT.md | sed -n -e '/^## Maintenance.*$/,/^#.*$/{ /^## Maintenance.*$/d; /^#.*$/d; p; }'",
-    "release-pre:prod": "semantic-release pre",
-    "release-post:prod": "semantic-release post",
-    "commit": "git-cz",
-    "commitmsg": "validate-commit-msg"
+    "hook-commit": "npm run lint",
+    "hook-push": "npm-run-all --parallel lint ci-test-unit",
+    "ci-scan": "npm run lint",
+    "ci-test-unit": "echo TODO: implement test:unit in package.json",
+    "ci-test-api": "echo TODO: implement test:api in package.json. Env=${taito_env} url=${taito_app_url} user=${test_api_user} password=${test_api_password}",
+    "ci-test-e2e": "echo TODO: implement test:e2e in package.json. Env=${taito_env} url=${taito_app_url} user=${test_e2e_user} password=${test_e2e_password}",
+    "ci-docs": "echo TODO: generate docs in package.json",
+    "ci-release-pre:prod": "semantic-release pre",
+    "ci-release-post:prod": "semantic-release post"
   },
   "pre-commit": [
-    "scan"
+    "hook-commit"
   ],
   "pre-push": [
-    "verify"
+    "hook-push"
   ],
   "release": {
     "getLastRelease": "last-release-git",
