--- a/server/Dockerfile.build
+++ b/server/Dockerfile.build
@@ -2,6 +2,7 @@
 FROM nodesource/jessie:6.3.1
 ARG BUILD_VERSION
 ARG BUILD_IMAGE_TAG
+ENV NODE_ENV development
 ENV BUILD_VERSION ${BUILD_VERSION}
 ENV BUILD_IMAGE_TAG ${BUILD_IMAGE_TAG}
 
@@ -10,8 +11,6 @@ RUN apt-get update && apt-get install -y \
   libfontconfig
 
 WORKDIR /app
-
-ENV NODE_ENV prod
 
 COPY ./package.json /app/package.json
 RUN npm install
@@ -25,5 +24,7 @@ RUN npm run build:prod
 # RUN npm install --only=dev
 
 EXPOSE 3332
+
+ENV NODE_ENV production
 
 CMD ["npm", "run", "start:prod"]
