--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "lint": "echo TODO: lint code in package.json",
     "commit": "git-cz",
     "commitmsg": "validate-commit-msg",
-    "users:local": "echo TODO: add local users to package.json",
-    "users:dev": "echo Basic auth: #username/#password; echo TODO: add dev users to package.json",
-    "users:test": "echo Basic auth: #username/#password; echo TODO: add test users to package.json",
-    "contacts-development": "cat PROJECT.md | sed -n -e '/^## Development.*$/,/^#.*$/{ /^## Development.*$/d; /^#.*$/d; p; }'",
-    "contacts-maintenance": "cat PROJECT.md | sed -n -e '/^## Maintenance.*$/,/^#.*$/{ /^## Maintenance.*$/d; /^#.*$/d; p; }'",
     "hook-commit": "npm run lint",
     "hook-push": "npm-run-all --parallel lint ci-test-unit",
+    "o-users:local": "echo TODO: add local users to package.json",
+    "o-users:dev": "echo Basic auth: #username/#password; echo TODO: add dev users to package.json",
+    "o-users:test": "echo Basic auth: #username/#password; echo TODO: add test users to package.json",
+    "contacts-development": "cat PROJECT.md | sed -n -e '/^## Development.*$/,/^#.*$/{ /^## Development.*$/d; /^#.*$/d; p; }'",
+    "contacts-maintenance": "cat PROJECT.md | sed -n -e '/^## Maintenance.*$/,/^#.*$/{ /^## Maintenance.*$/d; /^#.*$/d; p; }'",
     "ci-scan": "npm run lint",
     "ci-test-unit": "echo TODO: implement test:unit in package.json",
     "ci-test-api": "echo TODO: implement test:api in package.json. Env=${taito_env} url=${taito_app_url} user=${test_api_user} password=${test_api_password}",
