--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -97,6 +97,24 @@ steps:
 
 # STACK END
 
+# TODO skip if container image has already been tested before
+# (a successful build with the same image tag exists)
+- id: test-api:local
+  waitFor: ['build-client', 'build-server']
+  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
+  args: ['ci-test-api:local']
+  env:
+    - taito_mode=ci
+
+# TODO skip if container image has already been tested before
+# (a successful build with the same image tag exists)
+- id: test-e2e:local
+  waitFor: ['build-client', 'build-server']
+  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
+  args: ['ci-test-e2e:local']
+  env:
+    - taito_mode=ci
+
 - id: db-deploy
   name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
   args: ['db-deploy:$BRANCH_NAME']
@@ -115,25 +133,25 @@ steps:
   env:
     - taito_mode=ci
 
-- id: test-api
+- id: test-api:ENV
   waitFor: ['wait']
   name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
   args: ['ci-test-api:$BRANCH_NAME']
   env:
     - taito_mode=ci
 
-- id: test-e2e
+- id: test-e2e:ENV
   waitFor: ['wait']
   name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
   args: ['ci-test-e2e:$BRANCH_NAME']
   env:
     - taito_mode=ci
 
-# - id: verify
-#   name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
-#   args: ['ci-verify:$BRANCH_NAME']
-#   env:
-#     - taito_mode=ci
+- id: verify
+  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
+  args: ['ci-verify:$BRANCH_NAME']
+  env:
+    - taito_mode=ci
 
 - id: publish
   name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
