build: added ci-check

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -44,7 +44,15 @@ steps:
 
 # ----------------------- Taito-cli ----------------------------------
 
+- id: check
+  waitFor: ['-']
+  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
+  args: ['ci-check:$BRANCH_NAME', 'server', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
+  env:
+    - taito_mode=ci
+
 - id: install
+  waitFor: ['-']
   name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
   args: ['o-install:$BRANCH_NAME']
   env:
