--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,12 +3,26 @@
 # TODO nginx as a frontend server so that the same docker-compose file works
 # also with production containers and cors is not required for development.
 
+server-template-front:
+  container_name: server-template-front
+  image: nginx:1.13.3
+  restart: always
+  ports:
+    - "3000:80"
+  links:
+    # - server-template-admin:server-template-admin
+    - server-template-client:server-template-client
+    - server-template-server:server-template-server
+  volumes:
+    - "./docker-nginx.conf:/etc/nginx/nginx.conf"
+    - "./docker-nginx.conf:/etc/nginx/nginx.conf2"
+
 # server-template-admin:
 #   container_name: server-template-admin
 #   build: ./admin
 #   restart: always
 #   ports:
-#     - "3333:3333"
+#     - "3334:3334"
 #   volumes:
 #     - "./admin:/app"
 #     - "/app/node_modules"
@@ -16,7 +30,7 @@
 #     - server-template-server:server-template-server
 #   environment:
 #     COMMON_ENV: local
-#     API_ROOT: 'http://0.0.0.0:3331'
+#     API_ROOT: 'http://0.0.0.0:3000/api'
 #     API_URL: ''
 
 server-template-client:
@@ -32,7 +46,7 @@ server-template-client:
     - server-template-server:server-template-server
   environment:
     COMMON_ENV: local
-    API_ROOT: 'http://0.0.0.0:3332'
+    API_ROOT: 'http://0.0.0.0:3000/api'
     API_URL: ''
 
 server-template-server:
