--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,5 @@
 # NOTE: Remove all extra containers that you don't need.
 
-# TODO nginx as a frontend server so that the same docker-compose file works
-# also with production containers and cors is not required for development.
-
 server-template-front:
   container_name: server-template-front
   image: nginx:1.13.3
@@ -15,11 +12,11 @@ server-template-front:
     - server-template-server:server-template-server
   volumes:
     - "./docker-nginx.conf:/etc/nginx/nginx.conf"
-    - "./docker-nginx.conf:/etc/nginx/nginx.conf2"
 
 # server-template-admin:
 #   container_name: server-template-admin
 #   build: ./admin
+#   dockerfile: ${dockerfile}
 #   restart: always
 #   ports:
 #     - "3334:3334"
@@ -30,15 +27,16 @@ server-template-front:
 #     - server-template-server:server-template-server
 #   environment:
 #     COMMON_ENV: local
-#     API_ROOT: 'http://0.0.0.0:3000/api'
-#     API_URL: ''
+#     API_ROOT: ''
+#     API_URL: '/api'
 
 server-template-client:
   container_name: server-template-client
   build: ./client
+  dockerfile: ${dockerfile}
   restart: always
   ports:
-    - "3333:3333"
+    - "3333"
   volumes:
     - "./client:/app"
     - "/app/node_modules"
@@ -46,15 +44,16 @@ server-template-client:
     - server-template-server:server-template-server
   environment:
     COMMON_ENV: local
-    API_ROOT: 'http://0.0.0.0:3000/api'
-    API_URL: ''
+    API_ROOT: ''
+    API_URL: '/api'
 
 server-template-server:
   container_name: server-template-server
   build: ./server
+  dockerfile: ${dockerfile}
   restart: always
   ports:
-    - "3332:3332"
+    - "3332"
   volumes:
     - "./server:/app"
     - "/app/node_modules"
@@ -91,7 +90,7 @@ server-template-cache:
   image: redis
   restart: always
   ports:
-    - "6379:6379"
+    - "6379"
 
 # "EXTERNAL RESOURCES"
 
@@ -100,7 +99,7 @@ server-template-database:
   image: kiasaki/alpine-postgres:9.5
   restart: always
   ports:
-    - "5432:5432"
+    - "5000:5432"
   environment:
     POSTGRES_DB: server_template_local
     POSTGRES_USER: server_template_local_app
@@ -114,7 +113,7 @@ server-template-bucket:
   restart: always
   command: server /export
   ports:
-    - "9000:9000"
+    - "9000"
   environment:
     MINIO_ACCESS_KEY: 070UEOQR6LX4YPZLFU0V
     MINIO_SECRET_KEY: CVQVa33NekSiOJGnevSY5ITr8Rql8lFkp22WhLQ+
