--- a/docker-nginx.conf
+++ b/docker-nginx.conf
@@ -31,30 +31,31 @@ http {
             proxy_redirect off;
 
             # Headers
-            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Real-IP  $remote_addr;
+            proxy_set_header X-Forwarded-For $remote_addr;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
 
-        # Forward /admin to admin
-        location /admin {
-            proxy_pass http://server-template-admin:3334;
-            proxy_http_version 1.1;
-
-            # Remove /api from path
-            rewrite ^/api/?(.*) /$1 break;
-
-            proxy_redirect off;
-
-            # Headers
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
+        # # Forward /admin to admin
+        # location /admin {
+        #     proxy_pass http://server-template-admin:3334;
+        #     proxy_http_version 1.1;
+        #
+        #     # Remove /api from path
+        #     rewrite ^/api/?(.*) /$1 break;
+        #
+        #     proxy_redirect off;
+        #
+        #     # Headers
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header Upgrade $http_upgrade;
+        #     proxy_set_header Connection 'upgrade';
+        #     proxy_set_header Host $host;
+        #     proxy_cache_bypass $http_upgrade;
+        # }
 
         # Forward / to client
         location / {
