feat: random port numbers

--- a/docker-nginx.conf
+++ b/docker-nginx.conf
@@ -51,6 +51,7 @@ http {
         #
         #     # Headers
         #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $remote_addr;
         #     proxy_set_header Upgrade $http_upgrade;
         #     proxy_set_header Connection 'upgrade';
         #     proxy_set_header Host $host;
@@ -69,6 +70,7 @@ http {
 
             # Headers
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $remote_addr;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
