fix: migrate tuning

--- a/docker-nginx.conf
+++ b/docker-nginx.conf
@@ -44,8 +44,8 @@ http {
         #     proxy_pass http://server-template-admin:3334;
         #     proxy_http_version 1.1;
         #
-        #     # Remove /api from path
-        #     rewrite ^/api/?(.*) /$1 break;
+        #     # Remove /admin from path
+        #     rewrite ^/admin/?(.*) /$1 break;
         #
         #     proxy_redirect off;
         #
@@ -62,9 +62,6 @@ http {
         location / {
             proxy_pass http://server-template-client:3333;
             proxy_http_version 1.1;
-
-            # Remove /api from path
-            rewrite ^/api/?(.*) /$1 break;
 
             proxy_redirect off;
 
