--- a/scripts/server-template/templates/ingress.yaml
+++ b/scripts/server-template/templates/ingress.yaml
@@ -27,7 +27,7 @@ spec:
 {{ if .Values.ingress.tls }}
   tls:
   - hosts:
-    - {{ template "fullname" . -}} .g.taitodev.com
+    - {{ template "fullname" . -}} .gopen1.taitodev.com
     secretName: {{ template "fullname" . }}-ssl
 
   {{- range $domain := .Values.domains }}
@@ -38,7 +38,7 @@ spec:
 
 {{ end }}
   rules:
-    - host: {{ template "fullname" . -}} .g.taitodev.com
+    - host: {{ template "fullname" . -}} .gopen1.taitodev.com
       http:
         paths:
           {{ if .Values.stack.server }}
