--- a/server/Dockerfile.build
+++ b/server/Dockerfile.build
@@ -1,13 +1,16 @@
-FROM node:8.5-alpine
+# TODO FROM node:8.5-alpine
+FROM nodesource/jessie:6.3.1
 
 ARG BUILD_VERSION
 ARG BUILD_IMAGE_TAG
 ENV NODE_ENV development
 ENV BUILD_VERSION ${BUILD_VERSION}
 ENV BUILD_IMAGE_TAG ${BUILD_IMAGE_TAG}
-ENV PICTURE_STORAGE_URL https://storage.googleapis.com/taito-erkka-testi
 
-RUN apk add --update-cache build-base python git fontconfig
+# RUN apk add --update-cache build-base python git fontconfig
+RUN apt-get update && apt-get install -y \
+  build-essential \
+  libfontconfig
 
 WORKDIR /app
 
